--- a/ui/package.json
+++ b/ui/package.json
@@ -15,8 +15,8 @@
     "jsx-loader": "^0.10.2",
     "lodash": "^2.4.1",
     "moment": "^2.7.0",
-    "react": "^0.10.0",
-    "react-nested-router": "^0.2.0",
+    "react": "^0.11.0",
+    "react-router": "^0.4.1",
     "webpack": "^1.3.1-beta4"
   }
 }
