add statsd support and pushing stats to a new 'meta' channel type

--- a/.env-example
+++ b/.env-example
@@ -58,3 +58,14 @@ ADMIN_PASSWORD=<password>
 ## Comma-separate list of usernames that have "root" access - can view
 ## all applications and keys.
 #ROOT_ADMINS=admin,admin2
+
+
+###
+## Statsd
+##
+## Pandapush can push statistics about connected clients and channels
+## to statsd.
+
+STATSD_HOST=localhost
+STATSD_PORT=8192
+STATSD_PREFIX=
