--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grand_master_cas": "^0.2.3",
     "jsonwebtoken": "^0.4.1",
     "lodash": "^2.4.1",
+    "lynx": "^0.2.0",
     "mkdirp": "^0.5.0",
     "moment": "^2.7.0"
   },
