use node clustering module for multiple processes
Change-Id: I2c31e5a710218ff5f94ab57c009f00917fc36233

--- a/.env-example
+++ b/.env-example
@@ -69,3 +69,14 @@ ADMIN_PASSWORD=<password>
 STATSD_HOST=localhost
 STATSD_PORT=8192
 STATSD_PREFIX=
+
+
+###
+## Worker processes
+##
+## Setting NODE_WORKERS will trigger the server to use the node cluster
+## module to use multiple worker processes. Set it to the number of
+## worker processes to use, or '-1' to use 1 per CPU. 0 means that the
+## main process will act as the sole worker.
+
+NODE_WORKERS=0
