--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "dotenv": "^0.4.0",
     "express": "^4.6.1",
     "faye": "^1.0.3",
-    "faye-redis-sharded": "git://github.com/zwily/faye-redis-sharded-node",
+    "faye-redis-sharded": "git://github.com/zwily/faye-redis-sharded-node#4c0f9b708e015b263fc5db2bbbb2e15eced071f4",
     "grand_master_cas": "^0.2.3",
     "jsonwebtoken": "^0.4.1",
     "lodash": "^2.4.1",
     "lynx": "^0.2.0",
     "mkdirp": "^0.5.0",
-    "moment": "^2.7.0"
+    "moment": "^2.7.0",
+    "redis": "^0.11.0"
   },
   "devDependencies": {
     "chomp": "0.0.1",
