refactor clustering module stuff to its own file
This cleans up the normal server booting stuff in its own file
(like pre-clustering). You can also start app.js without clustering
at all directly now.

Change-Id: I060e904ed6531bb17be8e113942d726eed800452

--- a/.env-example
+++ b/.env-example
@@ -78,5 +78,8 @@ STATSD_PREFIX=
 ## module to use multiple worker processes. Set it to the number of
 ## worker processes to use, or '-1' to use 1 per CPU. 0 means that the
 ## main process will act as the sole worker.
+##
+## (To avoid the clustering module completely, you can also start app.js
+## directly.)
 
 NODE_WORKERS=0
