--- a/.env-example
+++ b/.env-example
@@ -43,8 +43,8 @@ DATA_STORE=FILE
 ## is inaccessible.
 
 ## Basic auth:
-ADMIN_USERNAME=<admin>
-ADMIN_PASSWORD=<password>
+#ADMIN_USERNAME=admin
+#ADMIN_PASSWORD=password
 
 ## CAS auth:
 #CAS_HOST=<cas host>
