--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cookie-session": "^1.0.2",
     "dotenv": "^0.4.0",
     "express": "^4.6.1",
-    "faye": "^1.0.3",
+    "faye": "^1.1.2",
     "faye-redis-sharded": "git://github.com/zwily/faye-redis-sharded-node#4c0f9b708e015b263fc5db2bbbb2e15eced071f4",
     "grand_master_cas": "^0.2.3",
     "jsonwebtoken": "^4.2.2",
@@ -39,7 +39,8 @@
     "proxyquire": "^1.0.1",
     "should": "^4.0.4",
     "sinon": "^1.10.3",
-    "yargs": "^1.2.6"
+    "yargs": "^1.2.6",
+    "nodemon": "~1.3.7"
   },
   "engines": {
     "node": "0.10.x"
