WIP: add support for presence channels
Change-Id: I12648fe70fec5c8cdf226e99dfd940dc7065a356

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,15 @@ dynamo:
 webpack:
   build: .
   command: nodejs ./node_modules/.bin/webpack --watch --colors --progress
+  working_dir: /app/ui
   volumes:
-    - "./ui/:/app"
+    - "./:/app"
+
+webpackclient:
+  build: .
+  command: nodejs ./node_modules/.bin/webpack -d --watch --colors --progress
+  volumes:
+    - "./client:/app"
 
 web:
   build: .
