--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^0.4.0",
     "express": "^4.6.1",
     "faye": "^1.1.2",
+    "faye-presence": "0.0.2",
     "faye-redis-sharded": "git://github.com/zwily/faye-redis-sharded-node#4c0f9b708e015b263fc5db2bbbb2e15eced071f4",
     "grand_master_cas": "^0.2.3",
     "jsonwebtoken": "^4.2.2",
