./ the volume paths
so docker-compose doesn't think we're using volume names

Change-Id: I0da994c0aad2e79e7391233a70dc59efa3776ec5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ dynamo:
   build: docker/dynamo
   command: -dbPath /var/lib/dynamodb
   volumes:
-    - "docker/data/dynamo:/var/lib/dynamodb"
+    - "./docker/data/dynamo:/var/lib/dynamodb"
   ports:
     - "8000"
   environment:
@@ -25,7 +25,7 @@ webpack:
   build: .
   command: nodejs ./node_modules/.bin/webpack --watch --colors --progress
   volumes:
-    - "ui/:/app"
+    - "./ui/:/app"
 
 web:
   build: .
