update the localdynamodb archive url
it moved

Change-Id: Ia06875616c08dd1cb42947342dff25aa4acca846

--- a/docker/dynamo/Dockerfile
+++ b/docker/dynamo/Dockerfile
@@ -1,6 +1,6 @@
 FROM java:latest
 
-RUN /usr/bin/curl -L http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest | /bin/tar xz
+RUN /usr/bin/curl -L https://s3-us-west-2.amazonaws.com/dynamodb-local/dynamodb_local_latest.tar.gz | /bin/tar xz
 RUN mkdir -p /var/lib/dynamodb
 
 ENTRYPOINT ["/usr/bin/java", "-Djava.library.path=./DynamoDBLocal_lib", "-jar", "DynamoDBLocal.jar"]
