--- a/package.json
+++ b/package.json
@@ -11,37 +11,38 @@
     "watch-test": "node_modules/.bin/mocha -w --require should --reporter list --ui bdd $(find test -name \"*.spec.js\")"
   },
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "^2.1.4",
     "aws-sdk": "^2.0.7",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.5.0",
-    "bunyan": "^0.23.1",
+    "bunyan": "^1.8.5",
     "connect-requestid": "^1.1.0",
     "cookie-parser": "^1.3.2",
-    "cookie-session": "^1.0.2",
-    "dotenv": "^0.4.0",
+    "cookie-session": "^1.2.0",
+    "dotenv": "^4.0.0",
     "express": "^4.6.1",
     "faye": "^1.1.2",
     "faye-presence": "0.0.3",
     "faye-redis-sharded": "git://github.com/zwily/faye-redis-sharded-node#4c0f9b708e015b263fc5db2bbbb2e15eced071f4",
     "grand_master_cas": "^0.2.3",
-    "jsonwebtoken": "^4.2.2",
-    "lodash": "^3.10.1",
+    "jsonwebtoken": "^7.2.1",
+    "lodash": "^4.17.4",
     "lynx": "^0.2.0",
     "mkdirp": "^0.5.0",
     "moment": "^2.7.0",
-    "redis": "^0.11.0"
+    "redis": "^2.6.5",
+    "shard-manager": "^1.0.0"
   },
   "devDependencies": {
     "chomp": "0.0.1",
-    "cli-color": "^0.3.2",
+    "cli-color": "^1.1.0",
     "commander": "^2.3.0",
-    "mocha": "^1.21.0",
+    "mocha": "^3.2.0",
     "proxyquire": "^1.0.1",
-    "should": "^4.0.4",
+    "should": "^11.2.0",
     "sinon": "^1.10.3",
-    "yargs": "^1.2.6",
-    "nodemon": "~1.3.7"
+    "yargs": "^6.6.0",
+    "nodemon": "~1.11.0"
   },
   "engines": {
     "node": "0.10.x"
