--- a/ui/package.json
+++ b/ui/package.json
@@ -9,14 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "envify": "^1.2.1",
+    "envify": "^4.0.0",
     "event-emitter": "^0.3.1",
-    "jquery": "^2.1.1",
+    "jquery": "^3.1.1",
     "jsx-loader": "^0.10.2",
-    "lodash": "^2.4.1",
-    "moment": "^2.7.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "react": "^0.11.0",
     "react-router": "^0.4.1",
-    "webpack": "^1.3.1-beta4"
+    "webpack": "^2.2.1"
   }
 }
