switch to fetch instead of jquery; fix safari
Switched to using the new fetch instead of $.ajaxJSON, including using
a polyfill for browsers without fetch.

Also fixed Safari by passing the token via a query param instead of
trying to use the Authorization header (which Safari overrides).

Change-Id: Icd19266cc678ade0f9437b8e97d3714780284fa3

--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.17.1",
     "react": "^0.11.0",
     "react-router": "^0.4.1",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "whatwg-fetch": "^2.0.2"
   }
 }
