babel loader; combined to single package.json
 * Switched to the babel webpack loader, so we can use more advanced
   js in the UI.
 * Combined package.json to a single one. This is because a bunch
   of code was duplicated.
 * Changed dockerfile build to not leave the resulting dev libraries
   (like webpack, etc) around in the resulting image. (this cut about
   100MB from the image)

Change-Id: Ib41c0fbed7db61a8ce9b4bfc803e90f93a31fa32

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,16 +23,14 @@ dynamo:
 
 webpack:
   build: .
-  command: node ./node_modules/.bin/webpack --watch --colors --progress
-  working_dir: /usr/src/app/ui
+  command: bash -c "
+    node_modules/.bin/webpack --watch --devtool inline-source-map --config ui/webpack.config.js &
+    node_modules/.bin/webpack --watch --devtool inline-source-map --config client/webpack.config.js"
+  working_dir: /usr/src/app
   volumes:
     - "./:/usr/src/app"
-
-webpackclient:
-  build: .
-  command: node ./node_modules/.bin/webpack -d --watch --colors --progress
-  volumes:
-    - "./client:/usr/src/app"
+  environment:
+    NODE_ENV: development
 
 web:
   build: .
