--- a/package.json
+++ b/package.json
@@ -34,6 +34,15 @@
     "shard-manager": "^1.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "envify": "^4.0.0",
+    "react": "^0.12.0",
+    "react-router": "^0.4.1",
+    "webpack": "^2.2.1",
+    "whatwg-fetch": "^2.0.2",
     "chomp": "0.0.1",
     "cli-color": "^1.1.0",
     "commander": "^2.3.0",
