--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "envify": "^4.0.0",
-    "react": "^0.12.0",
-    "react-router": "^0.4.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.0",
     "webpack": "^2.2.1",
     "whatwg-fetch": "^2.0.2",
     "chomp": "0.0.1",
