--- a/package.json
+++ b/package.json
@@ -36,23 +36,24 @@
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
-    "envify": "^4.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.0",
-    "webpack": "^2.2.1",
-    "whatwg-fetch": "^2.0.2",
     "chomp": "0.0.1",
     "cli-color": "^1.1.0",
     "commander": "^2.3.0",
+    "envify": "^4.0.0",
     "mocha": "^3.2.0",
+    "nodemon": "~1.11.0",
     "proxyquire": "^1.0.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.0",
     "should": "^11.2.0",
     "sinon": "^1.10.3",
-    "yargs": "^6.6.0",
-    "nodemon": "~1.11.0"
+    "webpack": "^2.2.1",
+    "whatwg-fetch": "^2.0.2",
+    "yargs": "^6.6.0"
   },
   "engines": {
     "node": "0.10.x"
