add a layer of redirection for specifying redis hosts
When deploying via Cloudgate, our redis host information will come in
via URLs injected by cloudgate, so we need a way to tell pandapush
what env vars too look for for the redis connection info.

Change-Id: I327ceec99e5207a0f00759f39e1fb61fe2660b4b

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,9 @@ web:
     VIRTUAL_PORT: 3000
     ADMIN_USERNAME: admin
     ADMIN_PASSWORD: password
-    REDIS_HOSTS: redis1:6379,redis2:6379
+    REDIS_URL_ENV_VARS: REDIS1_URL,REDIS2_URL
+    REDIS1_URL: tcp://redis1:6379
+    REDIS2_URL: tcp://redis2:6379
     DATA_STORE: FILE
     NODE_ENV: development
     STATSD_HOST: statsd
