fix looking up applications
Change-Id: If7e98518712dd4ed6eb27cb090175a8e1ade3907

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,9 @@ webpack:
 
 web:
   build: .
-  command: node ./bin/create_dynamo_tables.js && ./node_modules/.bin/nodemon --watch app/ app/app.js
+  command: bash -c "
+    node ./bin/create_dynamo_tables.js &&
+    ./node_modules/.bin/nodemon --watch app/ app/app.js"
   volumes:
     - ".:/usr/src/app"
   links:
