--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "2014 Copyright Instructure",
   "main": "server.js",
   "scripts": {
+    "eslint": "eslint .",
     "test": "node_modules/.bin/mocha --require should --ui bdd $(find test -name \"*.spec.js\")",
     "watch-test": "node_modules/.bin/mocha -w --require should --reporter list --ui bdd $(find test -name \"*.spec.js\")"
   },
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
@@ -43,6 +45,9 @@
     "cli-color": "^1.1.0",
     "commander": "^2.3.0",
     "envify": "^4.0.0",
+    "eslint": "^3.15.0",
+    "eslint-config-semistandard": "^7.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "mocha": "^3.2.0",
     "nodemon": "~1.11.0",
     "proxyquire": "^1.0.1",
@@ -51,6 +56,7 @@
     "react-router": "^3.0.0",
     "should": "^11.2.0",
     "sinon": "^1.10.3",
+    "snazzy": "^6.0.0",
     "webpack": "^2.2.1",
     "whatwg-fetch": "^2.0.2",
     "yargs": "^6.6.0"
