Switch to SQL for the application/key store.
The Dynamo/File abstraction was too unwieldy, and I really wanted
to keep the property that it was easy to run pandapush as a single
dockerfile. Getting rid of that abstraction meant I needed a new one
that would provide both a local datastore that didn't need a server
(sqlite) and a remote one for distributed setups (postgres).

This commit switches the data job to knex, and cleans up a bunch
of crap.

--- a/.env-example
+++ b/.env-example
@@ -3,18 +3,12 @@
 ##
 ## The database is only used for storing applications and keys.
 
-## Use simple file store. (Only appropriate for development
-## and single-server deployments.)
-
-DATA_STORE=FILE
-
-## Dynamo store.
-
-#DATA_STORE=DYNAMO
-#AWS_REGION=us-east-1
-#DYNAMO_TABLE_APPLICATIONS=pandapush-applications
-#DYNAMO_TABLE_KEYS=pandapush-keys
-
+#DATABASE=postgres
+#DATABASE_ADDRESS=<hostname>
+#DATABASE_PORT=<port>
+#DATABASE_USERNAME=<username>
+#DATABASE_PASSWORD=<password>
+#DATABASE_NAME=<db name>
 
 ###
 ## Redis
@@ -69,17 +63,3 @@ DATA_STORE=FILE
 STATSD_HOST=localhost
 STATSD_PORT=8192
 STATSD_PREFIX=
-
-
-###
-## Worker processes
-##
-## Setting NODE_WORKERS will trigger the server to use the node cluster
-## module to use multiple worker processes. Set it to the number of
-## worker processes to use, or '-1' to use 1 per CPU. 0 means that the
-## main process will act as the sole worker.
-##
-## (To avoid the clustering module completely, you can also start app.js
-## directly.)
-
-NODE_WORKERS=0
