--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   "rules": {
     "react/jsx-uses-vars": "error",
     "no-var": "error",
-    "prefer-const": "warn"
+    "prefer-const": "warn",
+    "radix": "error"
   },
   "env": {
     "browser": true,
