--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "faye-redis-sharded": "git://github.com/zwily/faye-redis-sharded-node#4c0f9b708e015b263fc5db2bbbb2e15eced071f4",
     "grand_master_cas": "^0.2.3",
     "jsonwebtoken": "^7.2.1",
+    "knex": "^0.12.6",
     "lodash": "^4.17.4",
     "lynx": "^0.2.0",
+    "memory-cache": "^0.1.6",
     "mkdirp": "^0.5.0",
     "moment": "^2.7.0",
+    "pg": "^6.1.2",
     "redis": "^2.6.5",
-    "shard-manager": "^1.0.0"
+    "shard-manager": "^1.0.0",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
