--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "main": "server/index.js",
   "scripts": {
     "eslint": "eslint .",
-    "test": "node_modules/.bin/mocha --require should --ui bdd $(find test -name \"*.spec.js\")",
-    "watch-test": "node_modules/.bin/mocha -w --require should --reporter list --ui bdd $(find test -name \"*.spec.js\")"
+    "test": "node_modules/.bin/mocha ./server/**/*.spec.js",
+    "test:watch": "node_modules/.bin/mocha -w ./server/**/*.spec.js",
+    "test:coverage": "istanbul cover _mocha -- ./server/**/*.spec.js"
   },
   "dependencies": {
     "async": "^2.1.4",
@@ -52,15 +53,17 @@
     "eslint": "^3.15.0",
     "eslint-config-semistandard": "^7.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "espower-loader": "^1.2.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "nodemon": "~1.11.0",
+    "power-assert": "^1.4.2",
     "proxyquire": "^1.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.0",
     "react-token-autocomplete": "^0.5.3",
     "react-tokenizer": "^0.3.0",
-    "should": "^11.2.0",
     "sinon": "^1.10.3",
     "snazzy": "^6.0.0",
     "webpack": "^2.2.1",
