--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "main": "server/index.js",
   "scripts": {
     "eslint": "eslint .",
-    "test": "node_modules/.bin/mocha ./server/**/*.spec.js",
-    "test:watch": "node_modules/.bin/mocha -w ./server/**/*.spec.js",
-    "test:coverage": "istanbul cover _mocha -- ./server/**/*.spec.js"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "async": "^2.1.4",
@@ -32,7 +32,6 @@
     "lodash": "^4.17.4",
     "lynx": "^0.2.0",
     "memory-cache": "^0.1.6",
-    "mkdirp": "^0.5.0",
     "moment": "^2.7.0",
     "pg": "^6.1.2",
     "redis": "^2.6.5",
@@ -53,18 +52,14 @@
     "eslint": "^3.15.0",
     "eslint-config-semistandard": "^7.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "espower-loader": "^1.2.0",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
+    "jest": "^19.0.0",
     "nodemon": "~1.11.0",
-    "power-assert": "^1.4.2",
-    "proxyquire": "^1.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.0",
     "react-token-autocomplete": "^0.5.3",
     "react-tokenizer": "^0.3.0",
-    "sinon": "^1.10.3",
     "snazzy": "^6.0.0",
     "webpack": "^2.2.1",
     "whatwg-fetch": "^2.0.2",
@@ -72,5 +67,10 @@
   },
   "engines": {
     "node": "6.x"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "server/**/*.js"
+    ]
   }
 }
