run statsd with new namespacing
Change-Id: I6f31f5cd9a4b3a2a96824c9b56f166cbbc4dc618

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     ports:
       - "80"
       - "8125/udp"
+    volumes:
+      - "./docker/statsd-config.json:/opt/statsd/config.js"
     environment:
       VIRTUAL_HOST: pandapush-graphite.docker
       VIRTUAL_PORT: 80
