add ability to specify some dev credentials via env vars
This makes it easier to use the pandapush docker image in a dev environment,
since you don't need to check in the config. You can specify the app/key
via environment vars instead of requiring them in the database.

Change-Id: Ie0aa4dbf15b9e54de0291d68256a846910424e96

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,9 @@ services:
       AWS_ACCESS_KEY_ID: key
       AWS_SECRET_ACCESS_KEY: secret
       NODE_ENV: development
+      DEV_APPLICATION_ID: 'devapp'
+      DEV_KEY_ID: 'devkey'
+      DEV_KEY_SECRET: 'devsecret'
       STATSD_HOST: statsd
       STATSD_PORT: 8125
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/src/app/node_modules/.bin
