upgrade node version, fix deprecated Buffer usage, upgrade sqlite3, prettier
(Sorry about mixing in the prettier fixes... Extracting the upgrades ended
up being tricky.)

Change-Id: Ibd4c568913a50e6e1a418ad4f5a76288036edd84

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,12 @@
 {
   "parser": "babel-eslint",
-  "extends": "eslint-config-semistandard",
-  "plugins": [
-    "react"
-  ],
-  "rules": {
-    "react/jsx-uses-vars": "error",
-    "no-var": "error",
-    "prefer-const": "warn",
-    "radix": "error"
-  },
+  "extends": "react-app",
+  "plugins": ["prettier"],
   "env": {
     "browser": true,
     "node": true
+  },
+  "rules": {
+    "prettier/prettier": "error"
   }
 }
