--- a/package.json
+++ b/package.json
@@ -36,25 +36,30 @@
     "pg": "^6.1.2",
     "redis": "^2.6.5",
     "shard-manager": "^1.0.0",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^4.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.22.0",
     "chomp": "0.0.1",
     "cli-color": "^1.1.0",
     "commander": "^2.3.0",
     "envify": "^4.0.0",
-    "eslint": "^3.15.0",
-    "eslint-config-semistandard": "^7.0.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint": "^4.19.1",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
     "istanbul": "^0.4.5",
     "jest": "^19.0.0",
     "nodemon": "~1.11.0",
+    "prettier": "1.13.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.0",
