add okta option for admin area authentication
Change-Id: I2d752a0bab74898dd9299659e7ce832528ac885d

--- a/.env-example
+++ b/.env-example
@@ -45,6 +45,16 @@
 #CAS_PATH=<cas path>
 #CAS_SERVICE=<url to your pandapush installation /admin>
 
+## Okta auth:
+#OKTA_ISSUER: https://<okta domain>/oauth2/default
+#OKTA_CLIENT_ID: <client id>
+#OKTA_CLIENT_SECRET: <client secret>
+#OKTA_REDIRECT_URI: https://<pandapush domain>/authorization-code/callback
+# If set, will strip the supplied value off of the incoming username.
+# Useful if your username format is something like `user@corp.example.com`,
+# and you want the username in the admin area to be `user`.
+#OKTA_STRIP_DOMAIN: @corp.example.com
+
 
 ###
 ## Root administrators
