--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@okta/oidc-middleware": "^0.1.3",
     "async": "^2.1.4",
     "aws-sdk": "^2.0.7",
     "basic-auth-connect": "^1.0.0",
