--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "jest": "^19.0.0",
     "nodemon": "~1.11.0",
     "prettier": "1.13.7",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "prop-types": "^15.6.2",
+    "react": "^15.5.0",
+    "react-dom": "^15.5.5",
     "react-router": "^3.0.0",
     "react-token-autocomplete": "^0.5.3",
     "react-tokenizer": "^0.3.0",
