make the auth method explicit
Change-Id: I7eabb5005a4492d72456080281021479abb0aa5a

--- a/.env-example
+++ b/.env-example
@@ -36,6 +36,9 @@
 ## (with a single user) or CAS. If neither is configured, the admin UI
 ## is inaccessible.
 
+## Method of auth to use: `basic`, `okta`, `cas`, `none`
+AUTH_METHOD=none
+
 ## Basic auth:
 #ADMIN_USERNAME=admin
 #ADMIN_PASSWORD=password
