--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
     environment:
       VIRTUAL_HOST: pandapush.docker
       VIRTUAL_PORT: 3000
+      AUTH_METHOD: basic
       ADMIN_USERNAME: admin
       ADMIN_PASSWORD: password
       REDIS_URL_ENV_VARS: REDIS1_URL,REDIS2_URL
