clean up `npm audit` output; get rid of CAS support
Removing `grand_master_cas` and `react-token-autocomplete` got rid of all
but one of the audit results. The former isn't needed anymore with Okta
support, and the latter was not used at all.

Change-Id: Iae3b3094985d8062115fd95754e4c6dbb6450afd

--- a/.env-example
+++ b/.env-example
@@ -33,20 +33,15 @@
 ## Admin authentication.
 ##
 ## Access to the admin area can be restricted via either basic HTTP auth
-## (with a single user) or CAS. If neither is configured, the admin UI
+## (with a single user) or Okta. If neither is configured, the admin UI
 ## is inaccessible.
 
-## Method of auth to use: `basic`, `okta`, `cas`, `none`
+## Method of auth to use: `basic`, `okta`, `none`
 AUTH_METHOD=none
 
 ## Basic auth:
 #ADMIN_USERNAME=admin
 #ADMIN_PASSWORD=password
-
-## CAS auth:
-#CAS_HOST=<cas host>
-#CAS_PATH=<cas path>
-#CAS_SERVICE=<url to your pandapush installation /admin>
 
 ## Okta auth:
 #OKTA_ISSUER: https://<okta domain>/oauth2/default
