upgrade a ton of packages
Also included a change to reach-router.

Change-Id: I5538ffbd89d64c9d18b3ee3a2b5c3f47947c4610

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
   webpack:
     build: .
     command: bash -c "
-      node_modules/.bin/webpack --watch --devtool inline-source-map --config ui/webpack.config.js &
-      node_modules/.bin/webpack --watch --devtool inline-source-map --config client/webpack.config.js"
+      node_modules/.bin/webpack --watch --mode development --devtool inline-source-map --config ui/webpack.config.js &
+      node_modules/.bin/webpack --watch --mode development --devtool inline-source-map --config client/webpack.config.js"
     environment:
       NODE_ENV: development
 
