--- a/package.json
+++ b/package.json
@@ -15,60 +15,67 @@
   "dependencies": {
     "@okta/oidc-middleware": "^0.1.3",
     "async": "^2.1.4",
-    "aws-sdk": "^2.0.7",
+    "aws-sdk": "^2.305.0",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.5.0",
     "bunyan": "^1.8.5",
     "connect-requestid": "^1.1.0",
     "cookie-parser": "^1.3.2",
-    "cookie-session": "^1.2.0",
-    "dotenv": "^4.0.0",
+    "cookie-session": "^1.3.2",
+    "dotenv": "^6.0.0",
     "express": "^4.6.1",
     "faye": "^1.2.4",
     "faye-presence": "0.0.3",
     "faye-redis-sharded": "git://github.com/zwily/faye-redis-sharded-node#4c0f9b708e015b263fc5db2bbbb2e15eced071f4",
     "jsonwebtoken": "^8.3.0",
-    "knex": "^0.12.6",
+    "knex": "^0.15.2",
     "lodash": "^4.17.5",
     "lynx": "^0.2.0",
-    "memory-cache": "^0.1.6",
+    "memory-cache": "^0.2.0",
     "moment": "^2.7.0",
-    "pg": "^6.1.2",
+    "pg": "^7.4.3",
     "redis": "^2.6.5",
     "shard-manager": "^1.0.0",
-    "sqlite3": "^4.0.1"
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.22.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@reach/router": "^1.1.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^8.2.2",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.0",
     "chomp": "0.0.1",
-    "cli-color": "^1.1.0",
-    "commander": "^2.3.0",
+    "cli-color": "^1.3.0",
+    "commander": "^2.17.1",
     "envify": "^4.0.0",
-    "eslint": "^4.19.1",
+    "eslint": "^4.14.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^5.0",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "istanbul": "^0.4.5",
-    "jest": "^19.0.0",
-    "nodemon": "~1.11.0",
-    "prettier": "1.13.7",
+    "jest": "^23.5.0",
+    "nodemon": "~1.18.4",
+    "prettier": "1.14.2",
     "prop-types": "^15.6.2",
-    "react": "^15.5.0",
-    "react-dom": "^15.5.5",
-    "react-router": "^3.0.0",
+    "query-string": "^6.1.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-tag-autocomplete": "^5.6.0",
     "react-tokenizer": "^0.3.0",
-    "snazzy": "^6.0.0",
-    "webpack": "^2.2.1",
+    "snazzy": "^8.0.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
     "whatwg-fetch": "^2.0.2",
-    "yargs": "^6.6.0"
+    "yargs": "^12.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
