admin ui: move to instui (no more bootstrap)
Change-Id: Ia6067fd657cc43ac43deb1306658152fa1e8c2c4

--- a/package.json
+++ b/package.json
@@ -43,6 +43,18 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@instructure/ui-alerts": "^5.30.0",
+    "@instructure/ui-breadcrumb": "^5.30.0",
+    "@instructure/ui-buttons": "^5.30.0",
+    "@instructure/ui-code-editor": "^5.30.0",
+    "@instructure/ui-elements": "^5.30.0",
+    "@instructure/ui-forms": "^5.30.0",
+    "@instructure/ui-icons": "^5.30.0",
+    "@instructure/ui-layout": "^5.30.0",
+    "@instructure/ui-menu": "^5.30.0",
+    "@instructure/ui-overlays": "^5.30.0",
+    "@instructure/ui-tabs": "^5.30.0",
+    "@instructure/ui-themes": "^5.30.0",
     "@reach/router": "^1.1.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.2",
