Migrate to New Jenkins
Change-Id: Ibce4c2ff23feff95af3be6e30abdce2f29ef13e4

--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -5,6 +5,22 @@ services:
       context: .
       args:
         prunedev: 'false'
+    volumes:
+      - 'coverage:/usr/src/app/coverage'
     # this container is run in the background and jenkins will exec
     # commands inside it, then kill it when done.
     command: sleep 100000000000
+  gergich:
+    image: instructure/gergich
+    environment:
+      GERGICH_KEY: "${GERGICH_KEY}"
+      GERRIT_PROJECT: "${GERRIT_PROJECT}"
+      GERRIT_HOST: "${GERRIT_HOST}"
+      GERRIT_BRANCH: "${GERRIT_BRANCH}"
+    volumes:
+      - '.git:/app/.git'
+      - 'tmp:/tmp'
+
+volumes:
+  tmp: {}
+  coverage: {}
