--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express": "^4.6.1",
     "faye": "^1.2.4",
     "faye-presence": "0.0.3",
-    "faye-redis-sharded": "git://github.com/instructure/faye-redis-sharded-node#bf3086228e34ed48e601fa60dde79845c8f6d02a",
+    "faye-redis-sharded": "git://github.com/instructure/faye-redis-sharded-node#4ed567a8a827c1c314d3692f41e2accb74908eb0",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
     "lodash": "^4.17.5",
@@ -36,6 +36,7 @@
     "pg": "^7.4.3",
     "redis": "^2.6.5",
     "redis-evalsha": "1.1.1",
+    "redlock": "4.1.0",
     "shard-manager": "^1.0.0",
     "sqlite3": "^4.0.2"
   },
