--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -17,6 +17,8 @@ services:
       GERRIT_PROJECT: "${GERRIT_PROJECT}"
       GERRIT_HOST: "${GERRIT_HOST}"
       GERRIT_BRANCH: "${GERRIT_BRANCH}"
+      GERRIT_CHANGE_ID: "${GERRIT_CHANGE_ID}"
+      GERRIT_PATCHSET_REVISION: "${GERRIT_PATCHSET_REVISION}"
     volumes:
       - '.git:/app/.git'
       - 'tmp:/tmp'
